apps/static/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  selector:
    app: static
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 8080
